# quarks

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
CMakeModules/: FindCrow.cmake  FindV8.cmake
build-writer-chain/: ocv_microservice_crow
build-writer-chain/quarks_db/: 000004.sst  000013.sst  000023.sst  000045.sst  000112.sst  000114.sst  IDENTITY  LOG  LOG.old.1595604861191522  LOG.old.1595606495695076  LOG.old.1595606792697699  LOG.old.1595607545385153  LOG.old.1595607585381993  LOG.old.1595607619339802  LOG.old.1595607718863318  LOG.old.1595610279276264  LOG.old.1595610310515153  LOG.old.1595632821507025  LOG.old.1595633864902892  LOG.old.1595634186422753  LOG.old.1595635972018863  LOG.old.1595878907128979  LOG.old.1595994771468885  LOG.old.1595994844312366  LOG.old.1595994877947893  LOG.old.1595996295513382  LOG.old.1595996326682522  LOG.old.1596001374164219  LOG.old.1596002374671962  LOG.old.1596002811644250  LOG.old.1596004456496697  LOG.old.1596004686426193  MANIFEST-000115
build-writer-tail/: ocv_microservice_crow  quarks.sh.txt
build-writer-tail/quarks_db/: 000004.sst  000007.sst  IDENTITY  LOG  LOG.old.1596005199412897  LOG.old.1596005412790532  MANIFEST-000008  OPTIONS-000011
docs/: Doxyfile.in
examples/: app.wren  quarks.wren  setupenv_for_ubuntu18_04.sh  setupenv_for_ubuntu20_04.sh  v8engine.cpp  v8engine.h  v8engine_usage.cpp
examples/node/: node_tcp_client.js
examples/plugins/: ffmpegplugin.cpp  ffmpegplugin.h
examples/static/: uploader.html
examples/templates/: app.wren  chat.html  console.html  feed.html  home.html  index.html  quarks.wren  readme.html  ws.html
examples/templates/console/: index.html
examples/templates/console/css/: main.css
examples/templates/console/js/: console.js  consolehook.js  main.js
examples/templates/spa/: index.html  products.json
examples/templates/spa/assets/js/: script.js
examples/wren/: feed.html
examples/wren/scripts/: app.wren
examples/wren/scripts/modules/: quarks.wren
include/: HTTPRequest.hpp  Wren++.hpp  base64.hpp  filter.hpp  geohash.hpp  httprouting.hpp  matrix.hpp  orm.hpp  plugins.hpp  pubsub.hpp  qsearch.hpp  qsocket.hpp  qsorter.hpp  quarks.hpp  quarks_channel_chat.html  quarkscloud.hpp  quarkstaskqueue.hpp  quarkstcp.hpp  routes.hpp  routing.hpp  sorter.hpp  tcprouting.hpp  v8engine.hpp  wrenengine.hpp
release/: build.tgz  ocv_microservice_crow  quarks
src/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Wren++.cpp  base64.cpp  build.ninja  cmake_install.cmake  filter.cpp  geohash.cpp  main.cpp  ocv_microservice_crow  qsearch.cpp  quarks.cpp  quarkstaskqueue.cpp  quarkstcp.cpp  routing.cpp  rules.ninja  tcprouting.cpp  v8engine.cpp
tests/: CMakeLists.txt
